Enforce beforeinstallpromptevent.prompt's user gesture requirement in the renderer.

This addresses a bug where tapping the installable ambient mini-infobar on
Chrome for Android may not correctly trigger the add to home screen dialog.
The root cause is that the user gesture requirement for calling
beforeinstallpromptevent.prompt() is checked in the browser, not the
renderer, because some platforms are only just rolling out the
requirement. As a result, calling prompt() without a user gesture
invalidates all weak pointers when it terminates, including the weak
pointer used by the mini-infobar to trigger the add to home screen dialog.

This CL fixes the bug by checking the user gesture in the renderer, and
not dispatching to the browser unless the gesture is present. This means
that the banner pipeline will not invalidate weak pointers when a user
gesture is not present.

BUG=869780
TBR=mkwst@chromium.org

Change-Id: Iee7dfc76401e7141707b2d7b2e6ac5e24297ac4b
Reviewed-on: https://chromium-review.googlesource.com/1158305
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580176}
Former-commit-id: eff562302acadcedfa3a981dbb7b9f952a81ff5a