chrome/browser/installable/installable_logging.cc
@@ -66,8 +66,6 @@ static const char kUrlNotSupportedForWebApkMessage[] =
 static const char kInIncognitoMessage[] =
     "the page is loaded in an incognito window";
 static const char kNotOfflineCapable[] = "the page does not work offline";
-static const char kNoGesture[] =
-    "beforeinstallpromptevent.prompt() was not called with a user gesture";
 }  // namespace
 
 void LogErrorToConsole(content::WebContents* web_contents,
@@ -90,6 +88,7 @@ void LogErrorToConsole(content::WebContents* web_contents,
     case FAILED_TO_CREATE_BANNER:
     case WAITING_FOR_MANIFEST:
     case WAITING_FOR_INSTALLABLE_CHECK:
+    case NO_GESTURE:
     case WAITING_FOR_NATIVE_DATA:
     case SHOWING_APP_INSTALLATION_DIALOG:
     case MAX_ERROR_CODE:
@@ -163,9 +162,6 @@ void LogErrorToConsole(content::WebContents* web_contents,
       break;
     case NOT_OFFLINE_CAPABLE:
       message = kNotOfflineCapable;
-      break;
-    case NO_GESTURE:
-      message = kNoGesture;
       break;
   }
 
