third_party/blink/renderer/modules/app_banner/before_install_prompt_event.h
@@ -43,9 +43,11 @@ class BeforeInstallPromptEvent final
       LocalFrame& frame,
       mojom::blink::AppBannerServicePtr service_ptr,
       mojom::blink::AppBannerEventRequest event_request,
-      const Vector<String>& platforms) {
+      const Vector<String>& platforms,
+      bool require_gesture) {
     return new BeforeInstallPromptEvent(name, frame, std::move(service_ptr),
-                                        std::move(event_request), platforms);
+                                        std::move(event_request), platforms,
+                                        require_gesture);
   }
 
   static BeforeInstallPromptEvent* Create(
@@ -74,7 +76,8 @@ class BeforeInstallPromptEvent final
                            LocalFrame&,
                            mojom::blink::AppBannerServicePtr,
                            mojom::blink::AppBannerEventRequest,
-                           const Vector<String>& platforms);
+                           const Vector<String>& platforms,
+                           bool require_gesture);
   BeforeInstallPromptEvent(ExecutionContext*,
                            const AtomicString& name,
                            const BeforeInstallPromptEventInit&);
@@ -87,7 +90,10 @@ class BeforeInstallPromptEvent final
   mojo::Binding<mojom::blink::AppBannerEvent> binding_;
   Vector<String> platforms_;
   Member<UserChoiceProperty> user_choice_;
-  bool prompt_called_;
+
+  // TODO(crbug.com/869780): remove this member when the ExperimentalAppBanners
+  // feature is removed.
+  bool require_gesture_;
 };
 
 DEFINE_TYPE_CASTS(BeforeInstallPromptEvent,
